Assignment4a/parser.output
Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: GLOBAL_DECLARATIONS MAIN_FUNCTION

    2 GLOBAL_DECLARATIONS: %empty
    3                    | GLOBAL_DECLARATIONS DECLARATION

    4 DECLARATION: TYPE NAME_LIST ';'

    5 NAME_LIST: NAME
    6          | NAME ',' NAME_LIST

    7 TYPE: INTEGER
    8     | FLOAT

    9 DEF: VOID NAME

   10 MAIN_FUNCTION: DEF '(' ')' '{' PROCEDURE '}'

   11 PROCEDURE: LOCAL_DECLARATIONS STATEMENT_LIST

   12 LOCAL_DECLARATIONS: %empty
   13                   | LOCAL_DECLARATIONS DECLARATION

   14 STATEMENT_LIST: %empty
   15               | STATEMENT_LIST STATEMENT

   16 STATEMENT: ASSIGN_STATEMENT
   17          | IF_STATEMENT
   18          | IF_ELSE_STATEMENT
   19          | WHILE_STATEMENT
   20          | DO_WHILE_STATEMENT

   21 DO_WHILE_STATEMENT: DO '{' STATEMENT_LIST '}' WHILE '(' COND_EXP ')' ';'

   22 WHILE_STATEMENT: WHILE '(' COND_EXP ')' '{' STATEMENT_LIST '}'
   23                | WHILE '(' COND_EXP ')' STATEMENT

   24 IF_STATEMENT: IF '(' COND_EXP ')' '{' STATEMENT_LIST '}'
   25             | IF '(' COND_EXP ')' STATEMENT

   26 BALANCED_IF_STATEMENT: ASSIGN_STATEMENT
   27                      | DO_WHILE_STATEMENT
   28                      | WHILE '(' COND_EXP ')' '{' STATEMENT_LIST '}'
   29                      | WHILE '(' COND_EXP ')' BALANCED_IF_STATEMENT
   30                      | IF '(' COND_EXP ')' '{' STATEMENT_LIST '}' ELSE '{' STATEMENT_LIST '}'
   31                      | IF '(' COND_EXP ')' BALANCED_IF_STATEMENT ELSE '{' STATEMENT_LIST '}'
   32                      | IF '(' COND_EXP ')' BALANCED_IF_STATEMENT ELSE BALANCED_IF_STATEMENT
   33                      | IF '(' COND_EXP ')' '{' STATEMENT_LIST '}' ELSE BALANCED_IF_STATEMENT

   34 IF_ELSE_STATEMENT: IF '(' COND_EXP ')' '{' STATEMENT_LIST '}' ELSE '{' STATEMENT_LIST '}'
   35                  | IF '(' COND_EXP ')' BALANCED_IF_STATEMENT ELSE '{' STATEMENT_LIST '}'
   36                  | IF '(' COND_EXP ')' BALANCED_IF_STATEMENT ELSE STATEMENT
   37                  | IF '(' COND_EXP ')' '{' STATEMENT_LIST '}' ELSE STATEMENT

   38 ASSIGN_STATEMENT: NAME '=' ARITH_EXP ';'

   39 COND_EXP: ARITH_EXP RELOP ARITH_EXP
   40         | ARITH_EXP EQOP ARITH_EXP
   41         | COND_EXP AND COND_EXP
   42         | COND_EXP OR COND_EXP
   43         | NOT COND_EXP
   44         | COND_EXP '?' COND_EXP ':' COND_EXP
   45         | '(' COND_EXP ')'

   46 ARITH_EXP: INTEGER_NUMBER
   47          | NAME
   48          | DOUBLE_NUMBER
   49          | ARITH_EXP '+' ARITH_EXP
   50          | ARITH_EXP '*' ARITH_EXP
   51          | ARITH_EXP '-' ARITH_EXP
   52          | ARITH_EXP '/' ARITH_EXP
   53          | '-' ARITH_EXP
   54          | '(' ARITH_EXP ')'
   55          | COND_EXP '?' ARITH_EXP ':' ARITH_EXP


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 21 22 23 24 25 28 29 30 31 32 33 34 35 36 37 45 54
')' (41) 10 21 22 23 24 25 28 29 30 31 32 33 34 35 36 37 45 54
'*' (42) 50
'+' (43) 49
',' (44) 6
'-' (45) 51 53
'/' (47) 52
':' (58) 44 55
';' (59) 4 21 38
'=' (61) 38
'?' (63) 44 55
'{' (123) 10 21 22 24 28 30 31 33 34 35 37
'}' (125) 10 21 22 24 28 30 31 33 34 35 37
error (256)
INTEGER (258) 7
FLOAT (259) 8
VOID (260) 9
NAME (261) 5 6 9 38 47
IF (262) 24 25 30 31 32 33 34 35 36 37
ELSE (263) 30 31 32 33 34 35 36 37
DO (264) 21
WHILE (265) 21 22 23 28 29
RELOP (266) 39
EQOP (267) 40
AND (268) 41
OR (269) 42
NOT (270) 43
DOUBLE_NUMBER (271) 48
INTEGER_NUMBER (272) 46


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
PROGRAM (32)
    on left: 1, on right: 0
GLOBAL_DECLARATIONS (33)
    on left: 2 3, on right: 1 3
DECLARATION (34)
    on left: 4, on right: 3 13
NAME_LIST (35)
    on left: 5 6, on right: 4 6
TYPE (36)
    on left: 7 8, on right: 4
DEF (37)
    on left: 9, on right: 10
MAIN_FUNCTION (38)
    on left: 10, on right: 1
PROCEDURE (39)
    on left: 11, on right: 10
LOCAL_DECLARATIONS (40)
    on left: 12 13, on right: 11 13
STATEMENT_LIST (41)
    on left: 14 15, on right: 11 15 21 22 24 28 30 31 33 34 35 37
STATEMENT (42)
    on left: 16 17 18 19 20, on right: 15 23 25 36 37
DO_WHILE_STATEMENT (43)
    on left: 21, on right: 20 27
WHILE_STATEMENT (44)
    on left: 22 23, on right: 19
IF_STATEMENT (45)
    on left: 24 25, on right: 17
BALANCED_IF_STATEMENT (46)
    on left: 26 27 28 29 30 31 32 33, on right: 29 31 32 33 35 36
IF_ELSE_STATEMENT (47)
    on left: 34 35 36 37, on right: 18
ASSIGN_STATEMENT (48)
    on left: 38, on right: 16 26
COND_EXP (49)
    on left: 39 40 41 42 43 44 45, on right: 21 22 23 24 25 28 29 30
    31 32 33 34 35 36 37 41 42 43 44 45 55
ARITH_EXP (50)
    on left: 46 47 48 49 50 51 52 53 54 55, on right: 38 39 40 49 50
    51 52 53 54 55


State 0

    0 $accept: . PROGRAM $end

    $default  reduce using rule 2 (GLOBAL_DECLARATIONS)

    PROGRAM              go to state 1
    GLOBAL_DECLARATIONS  go to state 2


State 1

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 3


State 2

    1 PROGRAM: GLOBAL_DECLARATIONS . MAIN_FUNCTION
    3 GLOBAL_DECLARATIONS: GLOBAL_DECLARATIONS . DECLARATION

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    VOID     shift, and go to state 6

    DECLARATION    go to state 7
    TYPE           go to state 8
    DEF            go to state 9
    MAIN_FUNCTION  go to state 10


State 3

    0 $accept: PROGRAM $end .

    $default  accept


State 4

    7 TYPE: INTEGER .

    $default  reduce using rule 7 (TYPE)


State 5

    8 TYPE: FLOAT .

    $default  reduce using rule 8 (TYPE)


State 6

    9 DEF: VOID . NAME

    NAME  shift, and go to state 11


State 7

    3 GLOBAL_DECLARATIONS: GLOBAL_DECLARATIONS DECLARATION .

    $default  reduce using rule 3 (GLOBAL_DECLARATIONS)


State 8

    4 DECLARATION: TYPE . NAME_LIST ';'

    NAME  shift, and go to state 12

    NAME_LIST  go to state 13


State 9

   10 MAIN_FUNCTION: DEF . '(' ')' '{' PROCEDURE '}'

    '('  shift, and go to state 14


State 10

    1 PROGRAM: GLOBAL_DECLARATIONS MAIN_FUNCTION .

    $default  reduce using rule 1 (PROGRAM)


State 11

    9 DEF: VOID NAME .

    $default  reduce using rule 9 (DEF)


State 12

    5 NAME_LIST: NAME .
    6          | NAME . ',' NAME_LIST

    ','  shift, and go to state 15

    $default  reduce using rule 5 (NAME_LIST)


State 13

    4 DECLARATION: TYPE NAME_LIST . ';'

    ';'  shift, and go to state 16


State 14

   10 MAIN_FUNCTION: DEF '(' . ')' '{' PROCEDURE '}'

    ')'  shift, and go to state 17


State 15

    6 NAME_LIST: NAME ',' . NAME_LIST

    NAME  shift, and go to state 12

    NAME_LIST  go to state 18


State 16

    4 DECLARATION: TYPE NAME_LIST ';' .

    $default  reduce using rule 4 (DECLARATION)


State 17

   10 MAIN_FUNCTION: DEF '(' ')' . '{' PROCEDURE '}'

    '{'  shift, and go to state 19


State 18

    6 NAME_LIST: NAME ',' NAME_LIST .

    $default  reduce using rule 6 (NAME_LIST)


State 19

   10 MAIN_FUNCTION: DEF '(' ')' '{' . PROCEDURE '}'

    $default  reduce using rule 12 (LOCAL_DECLARATIONS)

    PROCEDURE           go to state 20
    LOCAL_DECLARATIONS  go to state 21


State 20

   10 MAIN_FUNCTION: DEF '(' ')' '{' PROCEDURE . '}'

    '}'  shift, and go to state 22


State 21

   11 PROCEDURE: LOCAL_DECLARATIONS . STATEMENT_LIST
   13 LOCAL_DECLARATIONS: LOCAL_DECLARATIONS . DECLARATION

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5

    $default  reduce using rule 14 (STATEMENT_LIST)

    DECLARATION     go to state 23
    TYPE            go to state 8
    STATEMENT_LIST  go to state 24


State 22

   10 MAIN_FUNCTION: DEF '(' ')' '{' PROCEDURE '}' .

    $default  reduce using rule 10 (MAIN_FUNCTION)


State 23

   13 LOCAL_DECLARATIONS: LOCAL_DECLARATIONS DECLARATION .

    $default  reduce using rule 13 (LOCAL_DECLARATIONS)


State 24

   11 PROCEDURE: LOCAL_DECLARATIONS STATEMENT_LIST .
   15 STATEMENT_LIST: STATEMENT_LIST . STATEMENT

    NAME   shift, and go to state 25
    IF     shift, and go to state 26
    DO     shift, and go to state 27
    WHILE  shift, and go to state 28

    $default  reduce using rule 11 (PROCEDURE)

    STATEMENT           go to state 29
    DO_WHILE_STATEMENT  go to state 30
    WHILE_STATEMENT     go to state 31
    IF_STATEMENT        go to state 32
    IF_ELSE_STATEMENT   go to state 33
    ASSIGN_STATEMENT    go to state 34


State 25

   38 ASSIGN_STATEMENT: NAME . '=' ARITH_EXP ';'

    '='  shift, and go to state 35


State 26

   24 IF_STATEMENT: IF . '(' COND_EXP ')' '{' STATEMENT_LIST '}'
   25             | IF . '(' COND_EXP ')' STATEMENT
   34 IF_ELSE_STATEMENT: IF . '(' COND_EXP ')' '{' STATEMENT_LIST '}' ELSE '{' STATEMENT_LIST '}'
   35                  | IF . '(' COND_EXP ')' BALANCED_IF_STATEMENT ELSE '{' STATEMENT_LIST '}'
   36                  | IF . '(' COND_EXP ')' BALANCED_IF_STATEMENT ELSE STATEMENT
   37                  | IF . '(' COND_EXP ')' '{' STATEMENT_LIST '}' ELSE STATEMENT

    '('  shift, and go to state 36


State 27

   21 DO_WHILE_STATEMENT: DO . '{' STATEMENT_LIST '}' WHILE '(' COND_EXP ')' ';'

    '{'  shift, and go to state 37


State 28

   22 WHILE_STATEMENT: WHILE . '(' COND_EXP ')' '{' STATEMENT_LIST '}'
   23                | WHILE . '(' COND_EXP ')' STATEMENT

    '('  shift, and go to state 38


State 29

   15 STATEMENT_LIST: STATEMENT_LIST STATEMENT .

    $default  reduce using rule 15 (STATEMENT_LIST)


State 30

   20 STATEMENT: DO_WHILE_STATEMENT .

    $default  reduce using rule 20 (STATEMENT)


State 31

   19 STATEMENT: WHILE_STATEMENT .

    $default  reduce using rule 19 (STATEMENT)


State 32

   17 STATEMENT: IF_STATEMENT .

    $default  reduce using rule 17 (STATEMENT)


State 33

   18 STATEMENT: IF_ELSE_STATEMENT .

    $default  reduce using rule 18 (STATEMENT)


State 34

   16 STATEMENT: ASSIGN_STATEMENT .

    $default  reduce using rule 16 (STATEMENT)


State 35

   38 ASSIGN_STATEMENT: NAME '=' . ARITH_EXP ';'

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 45
    ARITH_EXP  go to state 46


State 36

   24 IF_STATEMENT: IF '(' . COND_EXP ')' '{' STATEMENT_LIST '}'
   25             | IF '(' . COND_EXP ')' STATEMENT
   34 IF_ELSE_STATEMENT: IF '(' . COND_EXP ')' '{' STATEMENT_LIST '}' ELSE '{' STATEMENT_LIST '}'
   35                  | IF '(' . COND_EXP ')' BALANCED_IF_STATEMENT ELSE '{' STATEMENT_LIST '}'
   36                  | IF '(' . COND_EXP ')' BALANCED_IF_STATEMENT ELSE STATEMENT
   37                  | IF '(' . COND_EXP ')' '{' STATEMENT_LIST '}' ELSE STATEMENT

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 47
    ARITH_EXP  go to state 48


State 37

   21 DO_WHILE_STATEMENT: DO '{' . STATEMENT_LIST '}' WHILE '(' COND_EXP ')' ';'

    $default  reduce using rule 14 (STATEMENT_LIST)

    STATEMENT_LIST  go to state 49


State 38

   22 WHILE_STATEMENT: WHILE '(' . COND_EXP ')' '{' STATEMENT_LIST '}'
   23                | WHILE '(' . COND_EXP ')' STATEMENT

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 50
    ARITH_EXP  go to state 48


State 39

   47 ARITH_EXP: NAME .

    $default  reduce using rule 47 (ARITH_EXP)


State 40

   43 COND_EXP: NOT . COND_EXP

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 51
    ARITH_EXP  go to state 48


State 41

   48 ARITH_EXP: DOUBLE_NUMBER .

    $default  reduce using rule 48 (ARITH_EXP)


State 42

   46 ARITH_EXP: INTEGER_NUMBER .

    $default  reduce using rule 46 (ARITH_EXP)


State 43

   53 ARITH_EXP: '-' . ARITH_EXP

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 45
    ARITH_EXP  go to state 52


State 44

   45 COND_EXP: '(' . COND_EXP ')'
   54 ARITH_EXP: '(' . ARITH_EXP ')'

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 53
    ARITH_EXP  go to state 54


State 45

   41 COND_EXP: COND_EXP . AND COND_EXP
   42         | COND_EXP . OR COND_EXP
   44         | COND_EXP . '?' COND_EXP ':' COND_EXP
   55 ARITH_EXP: COND_EXP . '?' ARITH_EXP ':' ARITH_EXP

    AND  shift, and go to state 55
    OR   shift, and go to state 56
    '?'  shift, and go to state 57


State 46

   38 ASSIGN_STATEMENT: NAME '=' ARITH_EXP . ';'
   39 COND_EXP: ARITH_EXP . RELOP ARITH_EXP
   40         | ARITH_EXP . EQOP ARITH_EXP
   49 ARITH_EXP: ARITH_EXP . '+' ARITH_EXP
   50          | ARITH_EXP . '*' ARITH_EXP
   51          | ARITH_EXP . '-' ARITH_EXP
   52          | ARITH_EXP . '/' ARITH_EXP

    RELOP  shift, and go to state 58
    EQOP   shift, and go to state 59
    '+'    shift, and go to state 60
    '-'    shift, and go to state 61
    '*'    shift, and go to state 62
    '/'    shift, and go to state 63
    ';'    shift, and go to state 64


State 47

   24 IF_STATEMENT: IF '(' COND_EXP . ')' '{' STATEMENT_LIST '}'
   25             | IF '(' COND_EXP . ')' STATEMENT
   34 IF_ELSE_STATEMENT: IF '(' COND_EXP . ')' '{' STATEMENT_LIST '}' ELSE '{' STATEMENT_LIST '}'
   35                  | IF '(' COND_EXP . ')' BALANCED_IF_STATEMENT ELSE '{' STATEMENT_LIST '}'
   36                  | IF '(' COND_EXP . ')' BALANCED_IF_STATEMENT ELSE STATEMENT
   37                  | IF '(' COND_EXP . ')' '{' STATEMENT_LIST '}' ELSE STATEMENT
   41 COND_EXP: COND_EXP . AND COND_EXP
   42         | COND_EXP . OR COND_EXP
   44         | COND_EXP . '?' COND_EXP ':' COND_EXP
   55 ARITH_EXP: COND_EXP . '?' ARITH_EXP ':' ARITH_EXP

    AND  shift, and go to state 55
    OR   shift, and go to state 56
    '?'  shift, and go to state 57
    ')'  shift, and go to state 65


State 48

   39 COND_EXP: ARITH_EXP . RELOP ARITH_EXP
   40         | ARITH_EXP . EQOP ARITH_EXP
   49 ARITH_EXP: ARITH_EXP . '+' ARITH_EXP
   50          | ARITH_EXP . '*' ARITH_EXP
   51          | ARITH_EXP . '-' ARITH_EXP
   52          | ARITH_EXP . '/' ARITH_EXP

    RELOP  shift, and go to state 58
    EQOP   shift, and go to state 59
    '+'    shift, and go to state 60
    '-'    shift, and go to state 61
    '*'    shift, and go to state 62
    '/'    shift, and go to state 63


State 49

   15 STATEMENT_LIST: STATEMENT_LIST . STATEMENT
   21 DO_WHILE_STATEMENT: DO '{' STATEMENT_LIST . '}' WHILE '(' COND_EXP ')' ';'

    NAME   shift, and go to state 25
    IF     shift, and go to state 26
    DO     shift, and go to state 27
    WHILE  shift, and go to state 28
    '}'    shift, and go to state 66

    STATEMENT           go to state 29
    DO_WHILE_STATEMENT  go to state 30
    WHILE_STATEMENT     go to state 31
    IF_STATEMENT        go to state 32
    IF_ELSE_STATEMENT   go to state 33
    ASSIGN_STATEMENT    go to state 34


State 50

   22 WHILE_STATEMENT: WHILE '(' COND_EXP . ')' '{' STATEMENT_LIST '}'
   23                | WHILE '(' COND_EXP . ')' STATEMENT
   41 COND_EXP: COND_EXP . AND COND_EXP
   42         | COND_EXP . OR COND_EXP
   44         | COND_EXP . '?' COND_EXP ':' COND_EXP
   55 ARITH_EXP: COND_EXP . '?' ARITH_EXP ':' ARITH_EXP

    AND  shift, and go to state 55
    OR   shift, and go to state 56
    '?'  shift, and go to state 57
    ')'  shift, and go to state 67


State 51

   41 COND_EXP: COND_EXP . AND COND_EXP
   42         | COND_EXP . OR COND_EXP
   43         | NOT COND_EXP .
   44         | COND_EXP . '?' COND_EXP ':' COND_EXP
   55 ARITH_EXP: COND_EXP . '?' ARITH_EXP ':' ARITH_EXP

    $default  reduce using rule 43 (COND_EXP)


State 52

   39 COND_EXP: ARITH_EXP . RELOP ARITH_EXP
   40         | ARITH_EXP . EQOP ARITH_EXP
   49 ARITH_EXP: ARITH_EXP . '+' ARITH_EXP
   50          | ARITH_EXP . '*' ARITH_EXP
   51          | ARITH_EXP . '-' ARITH_EXP
   52          | ARITH_EXP . '/' ARITH_EXP
   53          | '-' ARITH_EXP .

    $default  reduce using rule 53 (ARITH_EXP)


State 53

   41 COND_EXP: COND_EXP . AND COND_EXP
   42         | COND_EXP . OR COND_EXP
   44         | COND_EXP . '?' COND_EXP ':' COND_EXP
   45         | '(' COND_EXP . ')'
   55 ARITH_EXP: COND_EXP . '?' ARITH_EXP ':' ARITH_EXP

    AND  shift, and go to state 55
    OR   shift, and go to state 56
    '?'  shift, and go to state 57
    ')'  shift, and go to state 68


State 54

   39 COND_EXP: ARITH_EXP . RELOP ARITH_EXP
   40         | ARITH_EXP . EQOP ARITH_EXP
   49 ARITH_EXP: ARITH_EXP . '+' ARITH_EXP
   50          | ARITH_EXP . '*' ARITH_EXP
   51          | ARITH_EXP . '-' ARITH_EXP
   52          | ARITH_EXP . '/' ARITH_EXP
   54          | '(' ARITH_EXP . ')'

    RELOP  shift, and go to state 58
    EQOP   shift, and go to state 59
    '+'    shift, and go to state 60
    '-'    shift, and go to state 61
    '*'    shift, and go to state 62
    '/'    shift, and go to state 63
    ')'    shift, and go to state 69


State 55

   41 COND_EXP: COND_EXP AND . COND_EXP

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 70
    ARITH_EXP  go to state 48


State 56

   42 COND_EXP: COND_EXP OR . COND_EXP

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 71
    ARITH_EXP  go to state 48


State 57

   44 COND_EXP: COND_EXP '?' . COND_EXP ':' COND_EXP
   55 ARITH_EXP: COND_EXP '?' . ARITH_EXP ':' ARITH_EXP

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44

    COND_EXP   go to state 72
    ARITH_EXP  go to state 73


State 58

   39 COND_EXP: ARITH_EXP RELOP . ARITH_EXP

    NAME            shift, and go to state 39
    NOT             shift, and go to state 40
    DOUBLE_NUMBER   shift, and go to state 41
    INTEGER_NUMBER  shift, and go to state 42
    '-'             shift, and go to state 43
    '('             shift, and go to state 44
